# nexus

./: .gitignore
nexusv5/: .htaccess  REVIEW.md  STRATEGY_REACT_INTEGRATION.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.js
nexusv5/alpha/: index.html  manifest.json  service-worker.js
nexusv5/api/: save-customer.php  update-status.php
nexusv5/css/: animations_append.css  base.css  layout.css  services.css  style.css  testimonials.css  typography.css  variables.css
nexusv5/database/: 00_main_schema.sql  README.md  config.php  customer_info.sql  customer_info_supabase.sql  hardening.sql  profiles.sql  promo_codes.sql  schema.sql  setup-orders-table.sql
nexusv5/js/: 3d-cards.js  3d-logo.js  activity-feed.js  auth.js  back-to-top.js  booking-widget.js  calendly-widget.js  cart.js  chatbot.js  checkout.js  command-palette.js  confetti.js  config.js  contact-form.js  cookie-consent.js  counter-animation.js  dashboard.js  email-service.js  exit-intent.js  faq-accordion.js  gsap-animations.js  keyboard-shortcuts.js  language-switcher.js  lazy-loading.js  liquid-distortion.js  main.js  newsletter-popup.js  page-transitions.js  preloader.js  promo-banner.js  push-notifications.js  quiz-widget.js  quote-calculator.js  reading-progress.js  script.js  scroll-reveal.js  smooth-scroll.js  spotlight.js  (+15 more)
nexusv5/wasm-effects/: Cargo.toml
nexusv5/wasm-effects/pkg/: package.json  wasm_effects.d.ts  wasm_effects.js  wasm_effects_bg.wasm  wasm_effects_bg.wasm.d.ts
nexusv5/wasm-effects/src/: lib.rs
supabase/: config.toml
(+73 files in other folders)
