[package]
name = "wasm-effects"
version = "0.1.0"
edition = "2021"
description = "High-performance WebAssembly particle system for Web Shop"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = true
